--- a/src/index.html
+++ b/src/index.html
@@ -7,39 +7,19 @@
     <title>Webpack Starter Kit</title>
 
     <!-- Don't forget to delete this style tag. -->
-    <style>
-      body {
-        min-height: 100vh;
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .intro {
-        text-align: center;
-      }
-
-      .intro h1 {
-        margin-top: 0;
-        font-weight: 500;
-        font-size: 40px;
-      }
-
-      .intro img {
-        display: block;
-        max-width: 100%;
-        height: auto;
-      }
-    </style>
   </head>
 
   <body>
-    <article class="intro">
-      <h1>Webpack starter kit</h1>
+    <div class="container">
+      <p>Your next trip to ...</p>
+      <input
+        class="search-input js-search-input"
+        type="text"
+        placeholder="country"
+        name="search"
+      />
 
-      <!-- HTML image reference example. -->
-      <img src="./images/intro.png" alt="" width="640" />
-    </article>
+      <div class="countries js-countries-container"></div>
+    </div>
   </body>
 </html>
