--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack Starter Kit</title>
-
-    <!-- Don't forget to delete this style tag. -->
+    <title>Coutry describer</title>
   </head>
 
   <body>
     <div class="container">
-      <p>Your next trip to ...</p>
+      <p>Please fill country name...</p>
       <input
         class="search-input js-search-input"
         type="text"
